@@ -1,3 +1,9 @@
+2002-01-22  Bernhard Rosenkraenzer <bero@redhat.com>
+	* doc/grep.texi, doc/grep.1, NEWS: Document --label
+
+2002-01-18  Bernhard Rosenkraenzer <bero@redhat.com>
+	* src/grep.c: Add --label, based on patch from Stepan Koltsov
+
 2001-11-20  Bernhard Rosenkraenzer <bero@redhat.com>
 	* autogen.sh: Don't hardcode aclocal dir
 
